--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,3 +38,10 @@ dependencies {
   androidTestImplementation 'androidx.test:runner:1.1.0-alpha3'
   androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0-alpha3'
 }
+
+kotlin {
+  experimental {
+    coroutines "enable"
+  }
+}
+
